--- a/force-app/main/default/aura/LCDemo4/LCDemo4.cmp
+++ b/force-app/main/default/aura/LCDemo4/LCDemo4.cmp
@@ -4,10 +4,27 @@
     
     <aura:attribute name = "newAcc" type = "Account" default = "{'sobjectype' : 'Account', 'Name' : 'TestAcc1'}"/>
     <h1>{!v.newAcc.Name}</h1>
+    <hr/>
     
     <aura:attribute name = "arrayDemo" type = "String[]" default = "['v1', 'v2', 'v3']"/>
     <h1>Array Values : {!v.arrayDemo[0]} {!v.arrayDemo[1]} {!v.arrayDemo[2]}</h1>
+    <h1>Length of Array : {!v.arrayDemo.length}</h1>
+    <hr/>
     
     <aura:attribute name = "listDemo" type = "List" default = "['List1', 'List2', 'List3']"/>
     <h1>List Values : {!v.listDemo[0]} {!v.listDemo[1]} {!v.listDemo[2]}</h1>
+    <h1>Length of List : {!v.listDemo.length}</h1>
+    <hr/>
+    
+    <aura:attribute name = "setDemo" type = "Set" default = "['Set1', 'Set2', 'Set3']"/>
+    <h1>Set Values : {!v.setDemo[2]} {!v.setDemo[1]} {!v.setDemo[0]}</h1>
+    <h1>Length of Set : {!v.setDemo.length}</h1>
+    <hr/>
+    
+    <aura:attribute name = "mapDemo" type = "Map" default = "{a : 'Map1', b : 'Map2', c: 'Map3'}"/>
+    <h1>Map Values : {!v.mapDemo.a} {!v.mapDemo.b} {!v.mapDemo.c}</h1>
+    <hr/>
+    
+    <aura:attribute name = "jsObject" type = "Object"/>
+    <h1>Object Value : {!v.jsObject.name} - {!v.jsObject.email}</h1>
 </aura:component>
